@@ -1,6 +1,5 @@
 package com.adamnagyan.yahoofinancewebapi.configurations;
 
-
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -14,14 +13,16 @@ import java.util.List;
 @Configuration
 @RequiredArgsConstructor
 public class CorsConfig {
-  @Bean
-  CorsConfigurationSource corsConfigurationSource() {
-    CorsConfiguration configuration = new CorsConfiguration();
-    configuration.addAllowedOriginPattern(CorsConfiguration.ALL);
-    configuration.setAllowedMethods(List.of(CorsConfiguration.ALL));
-    configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token", "recaptcha"));
-    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-    source.registerCorsConfiguration("/**", configuration);
-    return source;
-  }
+
+	@Bean
+	CorsConfigurationSource corsConfigurationSource() {
+		CorsConfiguration configuration = new CorsConfiguration();
+		configuration.addAllowedOriginPattern(CorsConfiguration.ALL);
+		configuration.setAllowedMethods(List.of(CorsConfiguration.ALL));
+		configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token", "recaptcha"));
+		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+		source.registerCorsConfiguration("/**", configuration);
+		return source;
+	}
+
 }
